feat add favoritest to schema.prisma
